[+]Se instalan dependencias y se configura en package.json, [+]Se configura .env & db-config para lanzar el servidor, [+]Se realizan los schemas de nuestra api rest

--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
+  "name": "test-bicis-backend",
+  "version": "1.0.0",
+  "description": "API Rest para test bicis",
+  "main": "app.mjs",
+  "type": "module",
+  "scripts": {
+    "dev": "node --env-file .env --watch ./src/app.mjs"
+  },
+  "keywords": [
+    "express",
+    "mongoose",
+    "nodejs",
+    "vanilla",
+    "javascript"
+  ],
+  "author": "Daniel Alejandro Cely Lopez <celydaniel97@gmail.com>",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.4"
+    "mongoose": "^8.15.0"
   }
 }
